testsuite/tests/saks/should_fail/saks007_fail.stderr

saks007_fail.hs:13:11: error: [GHC-01259]
    • Illegal constraint in a kind: forall k1 k2.
                                    (F k1 ~ G k2) =>
                                    k1 -> k2 -> *
    • In a standalone kind signature for ‘X’:
        forall k1 k2. (F k1 ~ G k2) => k1 -> k2 -> Type
